// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manufacturing/base 1`] = `
Object {
  "cul_functions": Map {
    "0_revenue$" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 1,
      "imported": "revenue_",
      "inputs": Array [
        "units_in",
        "price_in",
      ],
      "name": "revenue$",
      "reason": "explicit import",
    },
    "0_costs$" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 1,
      "imported": "costs_",
      "inputs": Array [
        "units_in",
      ],
      "name": "costs$",
      "reason": "explicit import",
    },
    "0_profit$" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 1,
      "imported": "profit_",
      "inputs": Array [
        "units_in",
        "price_in",
      ],
      "name": "profit$",
      "reason": "explicit import",
    },
    "0_units$" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 1,
      "imported": "units_",
      "inputs": Array [
        "units_in",
      ],
      "name": "units$",
      "reason": "explicit import",
    },
    "0_price$" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 1,
      "imported": "price_",
      "inputs": Array [
        "price_in",
      ],
      "name": "price$",
      "reason": "explicit import",
    },
    "0_revenue" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "units_in",
        "price_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 1,
          "index": 872,
          "line": 17,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 23,
          "index": 730,
          "line": 13,
        },
      },
      "name": "revenue",
      "reason": "definition",
    },
    "0_costs" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "units_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 1,
          "index": 1246,
          "line": 29,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 21,
          "index": 1108,
          "line": 25,
        },
      },
      "name": "costs",
      "reason": "definition",
    },
    "0_profit" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "units_in",
        "price_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 1,
          "index": 1626,
          "line": 41,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 22,
          "index": 1486,
          "line": 37,
        },
      },
      "name": "profit",
      "reason": "definition",
    },
    "0_units" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "units_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 1,
          "index": 1999,
          "line": 53,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 21,
          "index": 1861,
          "line": 49,
        },
      },
      "name": "units",
      "reason": "definition",
    },
    "0_price" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "price_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 1,
          "index": 2371,
          "line": 65,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 21,
          "index": 2233,
          "line": 61,
        },
      },
      "name": "price",
      "reason": "definition",
    },
    "1_revenue" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "units_in",
        "price_in",
      ],
      "name": "revenue",
      "reason": "implicit import",
    },
    "1_costs" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "units_in",
      ],
      "name": "costs",
      "reason": "implicit import",
    },
    "1_profit" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "units_in",
        "price_in",
      ],
      "name": "profit",
      "reason": "implicit import",
    },
    "1_units" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "units_in",
      ],
      "name": "units",
      "reason": "implicit import",
    },
    "1_price" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "price_in",
      ],
      "name": "price",
      "reason": "implicit import",
    },
    "1_revenue_" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 1,
      "inputs": Array [
        "units_in",
        "price_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 1,
          "index": 60,
          "line": 3,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 23,
          "index": 23,
          "line": 1,
        },
      },
      "name": "revenue_",
      "reason": "definition (renamed)",
    },
    "1_costs_" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 1,
      "inputs": Array [
        "units_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 40,
          "index": 142,
          "line": 6,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 21,
          "index": 123,
          "line": 6,
        },
      },
      "name": "costs_",
      "reason": "definition (renamed)",
    },
    "1_profit_" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 1,
      "inputs": Array [
        "units_in",
        "price_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 47,
          "index": 192,
          "line": 8,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 22,
          "index": 167,
          "line": 8,
        },
      },
      "name": "profit_",
      "reason": "definition (renamed)",
    },
    "1_units_" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 1,
      "inputs": Array [
        "units_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 35,
          "index": 240,
          "line": 11,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 21,
          "index": 226,
          "line": 11,
        },
      },
      "name": "units_",
      "reason": "definition (renamed)",
    },
    "1_units_in" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 1,
      "inputs": Array [
        "units_in",
      ],
      "name": "units_in",
      "reason": "input definition",
    },
    "1_price_" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 1,
      "inputs": Array [
        "price_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 35,
          "index": 277,
          "line": 12,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 21,
          "index": 263,
          "line": 12,
        },
      },
      "name": "price_",
      "reason": "definition (renamed)",
    },
    "1_price_in" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 1,
      "inputs": Array [
        "price_in",
      ],
      "name": "price_in",
      "reason": "input definition",
    },
  },
  "cul_input_map": Map {
    "0_revenue$" => Set {
      "units_in",
      "price_in",
    },
    "0_costs$" => Set {
      "units_in",
    },
    "0_profit$" => Set {
      "units_in",
      "price_in",
    },
    "0_units$" => Set {
      "units_in",
    },
    "0_price$" => Set {
      "price_in",
    },
    "0_revenue" => Set {
      "units_in",
      "price_in",
    },
    "0_costs" => Set {
      "units_in",
    },
    "0_profit" => Set {
      "units_in",
      "price_in",
    },
    "0_units" => Set {
      "units_in",
    },
    "0_price" => Set {
      "price_in",
    },
    "1_revenue" => Set {
      "units_in",
      "price_in",
    },
    "1_costs" => Set {
      "units_in",
    },
    "1_profit" => Set {
      "units_in",
      "price_in",
    },
    "1_units" => Set {
      "units_in",
    },
    "1_price" => Set {
      "price_in",
    },
    "1_revenue_" => Set {
      "units_in",
      "price_in",
    },
    "1_costs_" => Set {
      "units_in",
    },
    "1_profit_" => Set {
      "units_in",
      "price_in",
    },
    "1_units_" => Set {
      "units_in",
    },
    "1_units_in" => Set {
      "units_in",
    },
    "1_price_" => Set {
      "price_in",
    },
    "1_price_in" => Set {
      "price_in",
    },
  },
  "cul_links": Set {
    Object {
      "from": "1_revenue_",
      "reason": "explicit import",
      "to": "0_revenue$",
    },
    Object {
      "from": "1_costs_",
      "reason": "explicit import",
      "to": "0_costs$",
    },
    Object {
      "from": "1_profit_",
      "reason": "explicit import",
      "to": "0_profit$",
    },
    Object {
      "from": "1_units_",
      "reason": "explicit import",
      "to": "0_units$",
    },
    Object {
      "from": "1_price_",
      "reason": "explicit import",
      "to": "0_price$",
    },
    Object {
      "from": "0_revenue$",
      "negs": Array [],
      "reason": "call",
      "to": "0_revenue",
    },
    Object {
      "from": "0_costs$",
      "negs": Array [],
      "reason": "call",
      "to": "0_costs",
    },
    Object {
      "from": "0_profit$",
      "negs": Array [],
      "reason": "call",
      "to": "0_profit",
    },
    Object {
      "from": "0_units$",
      "negs": Array [],
      "reason": "call",
      "to": "0_units",
    },
    Object {
      "from": "0_price$",
      "negs": Array [],
      "reason": "call",
      "to": "0_price",
    },
    Object {
      "from": "0_revenue",
      "reason": "implicit import",
      "to": "1_revenue",
    },
    Object {
      "from": "0_costs",
      "reason": "implicit import",
      "to": "1_costs",
    },
    Object {
      "from": "0_profit",
      "reason": "implicit import",
      "to": "1_profit",
    },
    Object {
      "from": "0_units",
      "reason": "implicit import",
      "to": "1_units",
    },
    Object {
      "from": "0_price",
      "reason": "implicit import",
      "to": "1_price",
    },
    Object {
      "from": "1_units",
      "negs": Array [],
      "reason": "call",
      "to": "1_revenue_",
    },
    Object {
      "from": "1_price",
      "negs": Array [],
      "reason": "call",
      "to": "1_revenue_",
    },
    Object {
      "from": "1_units",
      "negs": Array [],
      "reason": "call",
      "to": "1_costs_",
    },
    Object {
      "from": "1_revenue",
      "negs": Array [],
      "reason": "call",
      "to": "1_profit_",
    },
    Object {
      "from": "1_costs",
      "negs": Array [],
      "reason": "call",
      "to": "1_profit_",
    },
    Object {
      "from": "1_units_in",
      "reason": "input",
      "to": "1_units_",
    },
    Object {
      "from": "1_price_in",
      "reason": "input",
      "to": "1_price_",
    },
  },
  "cul_scope_ids_to_resource": Map {
    0 => "./base.cul.js",
    1 => "./base.cul.js?+memoed&cul_scope_id=1&cul_parent_scope_id=0",
  },
  "import_sources_to_resource": Map {
    "0_./base.cul.js?+memoed" => "./base.cul.js?+memoed&cul_scope_id=1&cul_parent_scope_id=0",
  },
}
`;

exports[`manufacturing/simple-neg-A 1`] = `
Object {
  "cul_functions": Map {
    "0_sales_by_product$" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 1,
      "imported": "sales_by_product_",
      "inputs": Array [
        "product_in",
      ],
      "name": "sales_by_product$",
      "reason": "explicit import",
    },
    "0_product$" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 1,
      "imported": "product_",
      "inputs": Array [
        "product_in",
      ],
      "name": "product$",
      "reason": "explicit import",
    },
    "0_sales_total$" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 1,
      "imported": "sales_total_",
      "inputs": Array [
        "product_in",
      ],
      "name": "sales_total$",
      "reason": "explicit import",
    },
    "0_sales_by_product" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "product_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 1,
          "index": 948,
          "line": 17,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 32,
          "index": 788,
          "line": 13,
        },
      },
      "name": "sales_by_product",
      "reason": "definition",
    },
    "0_product" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "product_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 1,
          "index": 1347,
          "line": 29,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 23,
          "index": 1205,
          "line": 25,
        },
      },
      "name": "product",
      "reason": "definition",
    },
    "0_sales_total" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "product_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 1,
          "index": 1769,
          "line": 41,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 27,
          "index": 1619,
          "line": 37,
        },
      },
      "name": "sales_total",
      "reason": "definition",
    },
    "1_sales_by_product" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "product_in",
      ],
      "name": "sales_by_product",
      "reason": "implicit import",
    },
    "1_product" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "product_in",
      ],
      "name": "product",
      "reason": "implicit import",
    },
    "1_sales_total" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "product_in",
      ],
      "name": "sales_total",
      "reason": "implicit import",
    },
    "1_sales_by_product_" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 1,
      "inputs": Array [
        "product_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 65,
          "index": 193,
          "line": 4,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 32,
          "index": 160,
          "line": 4,
        },
      },
      "name": "sales_by_product_",
      "reason": "definition (renamed)",
    },
    "1_product_" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 1,
      "inputs": Array [
        "product_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 39,
          "index": 234,
          "line": 5,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 23,
          "index": 218,
          "line": 5,
        },
      },
      "name": "product_",
      "reason": "definition (renamed)",
    },
    "1_product_in" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 1,
      "inputs": Array [
        "product_in",
      ],
      "name": "product_in",
      "reason": "input definition",
    },
    "1_sales_total_" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 1,
      "inputs": Array [
        "product_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 60,
          "index": 329,
          "line": 7,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 27,
          "index": 263,
          "line": 6,
        },
      },
      "name": "sales_total_",
      "reason": "definition (renamed)",
    },
  },
  "cul_input_map": Map {
    "0_sales_by_product$" => Set {
      "product_in",
    },
    "0_product$" => Set {
      "product_in",
    },
    "0_sales_total$" => Set {
      "product_in",
    },
    "0_sales_by_product" => Set {
      "product_in",
    },
    "0_product" => Set {
      "product_in",
    },
    "0_sales_total" => Set {
      "product_in",
    },
    "1_sales_by_product" => Set {
      "product_in",
    },
    "1_product" => Set {
      "product_in",
    },
    "1_sales_total" => Set {
      "product_in",
    },
    "1_sales_by_product_" => Set {
      "product_in",
    },
    "1_product_" => Set {
      "product_in",
    },
    "1_product_in" => Set {
      "product_in",
    },
    "1_sales_total_" => Set {
      "product_in",
    },
  },
  "cul_links": Set {
    Object {
      "from": "1_sales_by_product_",
      "reason": "explicit import",
      "to": "0_sales_by_product$",
    },
    Object {
      "from": "1_product_",
      "reason": "explicit import",
      "to": "0_product$",
    },
    Object {
      "from": "1_sales_total_",
      "reason": "explicit import",
      "to": "0_sales_total$",
    },
    Object {
      "from": "0_sales_by_product$",
      "negs": Array [],
      "reason": "call",
      "to": "0_sales_by_product",
    },
    Object {
      "from": "0_product$",
      "negs": Array [],
      "reason": "call",
      "to": "0_product",
    },
    Object {
      "from": "0_sales_total$",
      "negs": Array [],
      "reason": "call",
      "to": "0_sales_total",
    },
    Object {
      "from": "0_sales_by_product",
      "reason": "implicit import",
      "to": "1_sales_by_product",
    },
    Object {
      "from": "0_product",
      "reason": "implicit import",
      "to": "1_product",
    },
    Object {
      "from": "0_sales_total",
      "reason": "implicit import",
      "to": "1_sales_total",
    },
    Object {
      "from": "1_product",
      "negs": Array [],
      "reason": "call",
      "to": "1_sales_by_product_",
    },
    Object {
      "from": "1_product_in",
      "reason": "input",
      "to": "1_product_",
    },
    Object {
      "from": "1_sales_by_product",
      "negs": Array [
        "product_in",
      ],
      "reason": "call",
      "to": "1_sales_total_",
    },
    Object {
      "from": "1_sales_by_product",
      "negs": Array [],
      "reason": "call",
      "to": "1_sales_total_",
    },
  },
  "cul_scope_ids_to_resource": Map {
    0 => "./simple-neg-A.cul.js",
    1 => "./simple-neg-A.cul.js?+memoed&cul_scope_id=1&cul_parent_scope_id=0",
  },
  "import_sources_to_resource": Map {
    "0_./simple-neg-A.cul.js?+memoed" => "./simple-neg-A.cul.js?+memoed&cul_scope_id=1&cul_parent_scope_id=0",
  },
}
`;

exports[`manufacturing/simple-neg-B 1`] = `
Object {
  "cul_functions": Map {
    "0_sales_by_product$" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 1,
      "imported": "sales_by_product_",
      "inputs": Array [
        "product_in",
      ],
      "name": "sales_by_product$",
      "reason": "explicit import",
    },
    "0_product$" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 1,
      "imported": "product_",
      "inputs": Array [
        "product_in",
      ],
      "name": "product$",
      "reason": "explicit import",
    },
    "0_sales_total$" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 1,
      "imported": "sales_total_",
      "inputs": Array [],
      "name": "sales_total$",
      "reason": "explicit import",
    },
    "0_sales_by_product" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "product_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 1,
          "index": 948,
          "line": 17,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 32,
          "index": 788,
          "line": 13,
        },
      },
      "name": "sales_by_product",
      "reason": "definition",
    },
    "0_product" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "product_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 1,
          "index": 1347,
          "line": 29,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 23,
          "index": 1205,
          "line": 25,
        },
      },
      "name": "product",
      "reason": "definition",
    },
    "0_sales_total" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 0,
      "inputs": Array [],
      "loc": SourceLocation {
        "end": Position {
          "column": 1,
          "index": 1769,
          "line": 41,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 27,
          "index": 1619,
          "line": 37,
        },
      },
      "name": "sales_total",
      "reason": "definition",
    },
    "1_sales_by_product" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "product_in",
      ],
      "name": "sales_by_product",
      "reason": "implicit import",
    },
    "1_product" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "product_in",
      ],
      "name": "product",
      "reason": "implicit import",
    },
    "1_sales_total" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 0,
      "inputs": Array [],
      "name": "sales_total",
      "reason": "implicit import",
    },
    "1_sales_by_product_" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 1,
      "inputs": Array [
        "product_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 65,
          "index": 193,
          "line": 4,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 32,
          "index": 160,
          "line": 4,
        },
      },
      "name": "sales_by_product_",
      "reason": "definition (renamed)",
    },
    "1_product_" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 1,
      "inputs": Array [
        "product_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 39,
          "index": 234,
          "line": 5,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 23,
          "index": 218,
          "line": 5,
        },
      },
      "name": "product_",
      "reason": "definition (renamed)",
    },
    "1_product_in" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 1,
      "inputs": Array [
        "product_in",
      ],
      "name": "product_in",
      "reason": "input definition",
    },
    "1_sales_total_" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 1,
      "inputs": Array [],
      "loc": SourceLocation {
        "end": Position {
          "column": 75,
          "index": 344,
          "line": 7,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 27,
          "index": 263,
          "line": 6,
        },
      },
      "name": "sales_total_",
      "reason": "definition (renamed)",
    },
  },
  "cul_input_map": Map {
    "0_sales_by_product$" => Set {
      "product_in",
    },
    "0_product$" => Set {
      "product_in",
    },
    "0_sales_total$" => Set {},
    "0_sales_by_product" => Set {
      "product_in",
    },
    "0_product" => Set {
      "product_in",
    },
    "0_sales_total" => Set {},
    "1_sales_by_product" => Set {
      "product_in",
    },
    "1_product" => Set {
      "product_in",
    },
    "1_sales_total" => Set {},
    "1_sales_by_product_" => Set {
      "product_in",
    },
    "1_product_" => Set {
      "product_in",
    },
    "1_product_in" => Set {
      "product_in",
    },
    "1_sales_total_" => Set {},
  },
  "cul_links": Set {
    Object {
      "from": "1_sales_by_product_",
      "reason": "explicit import",
      "to": "0_sales_by_product$",
    },
    Object {
      "from": "1_product_",
      "reason": "explicit import",
      "to": "0_product$",
    },
    Object {
      "from": "1_sales_total_",
      "reason": "explicit import",
      "to": "0_sales_total$",
    },
    Object {
      "from": "0_sales_by_product$",
      "negs": Array [],
      "reason": "call",
      "to": "0_sales_by_product",
    },
    Object {
      "from": "0_product$",
      "negs": Array [],
      "reason": "call",
      "to": "0_product",
    },
    Object {
      "from": "0_sales_total$",
      "negs": Array [],
      "reason": "call",
      "to": "0_sales_total",
    },
    Object {
      "from": "0_sales_by_product",
      "reason": "implicit import",
      "to": "1_sales_by_product",
    },
    Object {
      "from": "0_product",
      "reason": "implicit import",
      "to": "1_product",
    },
    Object {
      "from": "0_sales_total",
      "reason": "implicit import",
      "to": "1_sales_total",
    },
    Object {
      "from": "1_product",
      "negs": Array [],
      "reason": "call",
      "to": "1_sales_by_product_",
    },
    Object {
      "from": "1_product_in",
      "reason": "input",
      "to": "1_product_",
    },
    Object {
      "from": "1_sales_by_product",
      "negs": Array [
        "product_in",
      ],
      "reason": "call",
      "to": "1_sales_total_",
    },
    Object {
      "from": "1_sales_by_product",
      "negs": Array [
        "product_in",
      ],
      "reason": "call",
      "to": "1_sales_total_",
    },
  },
  "cul_scope_ids_to_resource": Map {
    0 => "./simple-neg-B.cul.js",
    1 => "./simple-neg-B.cul.js?+memoed&cul_scope_id=1&cul_parent_scope_id=0",
  },
  "import_sources_to_resource": Map {
    "0_./simple-neg-B.cul.js?+memoed" => "./simple-neg-B.cul.js?+memoed&cul_scope_id=1&cul_parent_scope_id=0",
  },
}
`;

exports[`manufacturing/simple-neg-C 1`] = `
Object {
  "cul_functions": Map {
    "0_sales_by_product$" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 1,
      "imported": "sales_by_product_",
      "inputs": Array [
        "product_in",
      ],
      "name": "sales_by_product$",
      "reason": "explicit import",
    },
    "0_product$" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 1,
      "imported": "product_",
      "inputs": Array [
        "product_in",
      ],
      "name": "product$",
      "reason": "explicit import",
    },
    "0_sales_total$" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 1,
      "imported": "sales_total_",
      "inputs": Array [],
      "name": "sales_total$",
      "reason": "explicit import",
    },
    "0_sales_by_product" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "product_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 1,
          "index": 948,
          "line": 17,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 32,
          "index": 788,
          "line": 13,
        },
      },
      "name": "sales_by_product",
      "reason": "definition",
    },
    "0_product" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "product_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 1,
          "index": 1347,
          "line": 29,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 23,
          "index": 1205,
          "line": 25,
        },
      },
      "name": "product",
      "reason": "definition",
    },
    "0_sales_total" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 0,
      "inputs": Array [],
      "loc": SourceLocation {
        "end": Position {
          "column": 1,
          "index": 1769,
          "line": 41,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 27,
          "index": 1619,
          "line": 37,
        },
      },
      "name": "sales_total",
      "reason": "definition",
    },
    "1_sales_by_product" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "product_in",
      ],
      "name": "sales_by_product",
      "reason": "implicit import",
    },
    "1_product" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "product_in",
      ],
      "name": "product",
      "reason": "implicit import",
    },
    "1_sales_total" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 0,
      "inputs": Array [],
      "name": "sales_total",
      "reason": "implicit import",
    },
    "1_sales_by_product_" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 1,
      "inputs": Array [
        "product_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 65,
          "index": 193,
          "line": 4,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 32,
          "index": 160,
          "line": 4,
        },
      },
      "name": "sales_by_product_",
      "reason": "definition (renamed)",
    },
    "1_product_" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 1,
      "inputs": Array [
        "product_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 39,
          "index": 234,
          "line": 5,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 23,
          "index": 218,
          "line": 5,
        },
      },
      "name": "product_",
      "reason": "definition (renamed)",
    },
    "1_product_in" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 1,
      "inputs": Array [
        "product_in",
      ],
      "name": "product_in",
      "reason": "input definition",
    },
    "1_sales_total_" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 1,
      "inputs": Array [],
      "loc": SourceLocation {
        "end": Position {
          "column": 56,
          "index": 325,
          "line": 7,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 27,
          "index": 263,
          "line": 6,
        },
      },
      "name": "sales_total_",
      "reason": "definition (renamed)",
    },
  },
  "cul_input_map": Map {
    "0_sales_by_product$" => Set {
      "product_in",
    },
    "0_product$" => Set {
      "product_in",
    },
    "0_sales_total$" => Set {},
    "0_sales_by_product" => Set {
      "product_in",
    },
    "0_product" => Set {
      "product_in",
    },
    "0_sales_total" => Set {},
    "1_sales_by_product" => Set {
      "product_in",
    },
    "1_product" => Set {
      "product_in",
    },
    "1_sales_total" => Set {},
    "1_sales_by_product_" => Set {
      "product_in",
    },
    "1_product_" => Set {
      "product_in",
    },
    "1_product_in" => Set {
      "product_in",
    },
    "1_sales_total_" => Set {},
  },
  "cul_links": Set {
    Object {
      "from": "1_sales_by_product_",
      "reason": "explicit import",
      "to": "0_sales_by_product$",
    },
    Object {
      "from": "1_product_",
      "reason": "explicit import",
      "to": "0_product$",
    },
    Object {
      "from": "1_sales_total_",
      "reason": "explicit import",
      "to": "0_sales_total$",
    },
    Object {
      "from": "0_sales_by_product$",
      "negs": Array [],
      "reason": "call",
      "to": "0_sales_by_product",
    },
    Object {
      "from": "0_product$",
      "negs": Array [],
      "reason": "call",
      "to": "0_product",
    },
    Object {
      "from": "0_sales_total$",
      "negs": Array [],
      "reason": "call",
      "to": "0_sales_total",
    },
    Object {
      "from": "0_sales_by_product",
      "reason": "implicit import",
      "to": "1_sales_by_product",
    },
    Object {
      "from": "0_product",
      "reason": "implicit import",
      "to": "1_product",
    },
    Object {
      "from": "0_sales_total",
      "reason": "implicit import",
      "to": "1_sales_total",
    },
    Object {
      "from": "1_product",
      "negs": Array [],
      "reason": "call",
      "to": "1_sales_by_product_",
    },
    Object {
      "from": "1_product_in",
      "reason": "input",
      "to": "1_product_",
    },
    Object {
      "from": "1_sales_by_product",
      "negs": Array [
        "product_in",
      ],
      "reason": "call",
      "to": "1_sales_total_",
    },
  },
  "cul_scope_ids_to_resource": Map {
    0 => "./simple-neg-C.cul.js",
    1 => "./simple-neg-C.cul.js?+memoed&cul_scope_id=1&cul_parent_scope_id=0",
  },
  "import_sources_to_resource": Map {
    "0_./simple-neg-C.cul.js?+memoed" => "./simple-neg-C.cul.js?+memoed&cul_scope_id=1&cul_parent_scope_id=0",
  },
}
`;
